# star-sign-app

./: .gitignore  README.md  app.spec  main.py  pyproject.toml  requirements.txt  setup.py  star_teller.spec
src/: app.py  star_teller.py
src/star_teller/: app.py
src/star_teller/controller/: controller.py
src/star_teller/controllers/: controller.py
src/star_teller/core/: __init__.py  star_sign.py
src/star_teller/resource_pkg/: resource.py
tests/: test_star_sign.py  test_star_teller.py
ui/: star_teller.ui
usr/share/applications/: star-sign.desktop
